# aera-vision-module

./: .gitignore  Cargo.toml  robot-cam-demo.replicode
aera/: Cargo.toml  build.rs
aera-vision-module/: Cargo.toml
aera-vision-module/src/: main.rs  tcp_data_message.proto
aera-vision-module/src/aera/: commands.rs  mod.rs  properties.rs
aera-vision-module/src/robot/: feedback_data.rs  mod.rs
aera-vision-simulator/: Cargo.toml
aera-vision-simulator/src/: main.rs  simulated_cube.rs
aera/src/: commands.rs  lib.rs  properties.rs  tcp_data_message.proto
pixy2/: .gitignore  Cargo.toml  build-lib.sh  build.rs
pixy2/src/: bridge.cpp  bridge.h  lib.rs
robot/: Cargo.toml
robot/src/: feedback_data.rs  lib.rs
vision/: Cargo.toml
vision/src/: lib.rs  preprocess.rs  utils.rs
vision/src/vision/: mod.rs
vision/src/vision/classifier/: clip.rs  mod.rs  nn.rs  utils.rs
vision/src/vision/proposals/: filter.rs  mod.rs  proposal_area.rs
vision/src/vision/proposals/color_gradient/: mod.rs
vision/src/vision/proposals/motion/: mod.rs  motion_matrix.rs
