[package]
name = "aera-vision-module"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
opencv = "0.93.3"
vision = { path = "../vision" }
pixy2 = { path = "../pixy2" }
anyhow = "1.0.90"
nalgebra = "0.33.1"
bincode = "1.3.3"
serde = { version = "1.0.213", features = ["derive"] }
serde-big-array = "0.5.1"

[build-dependencies]
prost-build = "0.13.3"
