[package]
name = "aera-vision-module"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.93.3", features = ["clang-runtime"]}
vision = { path = "../vision" }
pixy2 = { path = "../pixy2" }
aera = { path = "../aera" }
robot = { path = "../robot" }
anyhow = "1.0.90"
nalgebra = "0.33.1"
log = "0.4.22"
simple-log = "2.1.1"
